# ESP32_Cam

./: README.md  Splash.h  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.defaults
.agents/: AGENTS.md
.cache/clangd/index/: auth.cpp.20463F55A0EC322F.idx  auth.h.0968BBBDABF702B9.idx  bf20a6.c.480C73B8A2FF6124.idx  bf20a6.h.E3D6A14F1D5882E8.idx  bf20a6_regs.h.4EF5781DA46C90A9.idx  bf20a6_settings.h.59833AE9E1B8817F.idx  bf3005.c.7F4B49E8D318B5BA.idx  bf3005.h.51FD9937877F427E.idx  bf3005_regs.h.341F23D69573FC2B.idx  ble_transfer.cpp.0D6F08E22781DBB4.idx  ble_transfer.h.759413388EC2462B.idx  bt_classic.cpp.057304A704667B29.idx  bt_classic.h.E723FAEDC60C4AD1.idx  button.cpp.02DB19438344F0EE.idx  button.h.5B8DFDA5DCA81601.idx  cam_hal.c.0EE4A4264957453A.idx  cam_hal.h.C752F5B30BD0D6A3.idx  camera.cpp.F0E6B6D8A1C1E7FB.idx  camera.h.2120D755CF4CE7C9.idx  config.h.EA7C93EC0F810196.idx  esp_camera.c.EA7EA992F285BA3A.idx  esp_camera.h.1726822D769C8F0B.idx  (+85 more)
Prueba/: CMakeLists.txt  partitions.csv  sdkconfig
Prueba/main/: CMakeLists.txt  auth.h  button.cpp  button.h  camera.cpp  camera.h  http_server.cpp  led.h  main.cpp  sd_storage.cpp  wifi_ap.cpp
Prueba/web-app/: index.html
main/: CMakeLists.txt  auth.cpp  ble_transfer.cpp  ble_transfer.h  bt_classic.cpp  bt_classic.h  button.cpp  button.h  camera.cpp  config.h  face_detect.cpp  face_detect.h  http_server.cpp  http_server.h  idf_component.yml  led.cpp  main.cpp  sd_storage.cpp  sd_storage.h  wifi_ap.cpp  wifi_ap.h
web-app/: app.js  convert_logo.py  fox_logo_base64.txt  index.html  preview_logo.html  styles.css
